Author search and quick match: Amazon, Goodreads and Open Library
Author search only asked Audnexus (Audible's catalogue), so most authors
without audiobooks weren't found. It now asks every enabled source at
once, each paced separately:

- Amazon: author ASINs from the byline links in a book search, then the
  bio and photo from the author's /stores/author/<ASIN>/about page
  (Amazon's placeholder silhouette isn't kept). Uses the metadata
  settings' domain and cookie, the headless browser where available, and
  retries once when a fresh session is sent to the local store.
- Goodreads: author ids from the search box's JSON autocomplete (not
  behind the WAF), then the full bio and photo from the author page.
- Open Library: several author records, exact names and the most
  prolific first.

Results are limited to the searched name (initials stand for names, the
surname must match), empty duplicates are dropped when the source has a
better record, and Audible's copies of Amazon authors are removed. The
match dialog shows each result's source and ids, and matching fetches it
by the id its source uses. Quick match and auto match try Amazon,
Goodreads, Open Library, Audnexus in turn, use only same-name results,
and fill gaps from later sources until there's a bio and a photo. A
match no longer wipes a bio or ASIN the result lacks, and records the
Goodreads and Open Library ids. Sources switched off in the metadata
settings are skipped.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CoYTdkM8qacvnj6mvEZPtP